<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pwrstat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/powerStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/intelligencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwrstat" />

    <TextView
        android:id="@+id/campoInteligencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/pwrstat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/fuerza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/campoFuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/campoInteligencia" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/velocidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/campoVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/campoFuerza" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/durabilidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/campoDurabilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/campoVelocidad" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/poder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/campoPoder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/campoDurabilidad" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/combate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/campoCombate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/campoPoder" />

</androidx.constraintlayout.widget.ConstraintLayout>